# src/models/likesModel.ts
@@ -1,0 +1,5 @@
+export type DoLikesRequest = {
+    my_vk_id: number;
+    user_to_like: number;
+    liked: boolean
+}
